--- a/style.css
+++ b/style.css
@@ -154,25 +154,21 @@ li {
     width: 100%;
     height: 10%;
   }
-/* Style the buttons that are used to open the tab content */
-.tab button {
-    background-color: inherit;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14% 17%;
-    transition: 0.3s;
+.tab {
+    overflow: hidden;
+    /* border: 1px solid #ccc; */
+    /* background-color: #f1f1f1; */
+    text-align: center;
+    width: 100%;
     height: 10%;
-  }  
-  /* Change background color of buttons on hover */
-.tab button:hover {
-    background-color: #ddd;
+    cursor: pointer;
   }
-  /* Create an active/current tablink class */
-.tab button.active {
-    background-color: #ccc;
-  }
+.tab.active{
+    background-color: #CCC;
+}
+.tab:hover{
+    background-color: #AAA;
+}
 /* Style the tab content */
 .tabcontent {
     /* display: none; */
