--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 .logo-img{
   background-color: white;
-  border-radius: 50%;
+  border-radius: 10%;
 }
 .navbar-expand-lg{
     padding: 0 1%; ;
@@ -149,14 +149,6 @@ li {
 .tab {
     overflow: hidden;
     /* border: 1px solid #ccc; */
-    background-color: #f1f1f1;
-    text-align: center;
-    width: 100%;
-    height: 10%;
-  }
-.tab {
-    overflow: hidden;
-    /* border: 1px solid #ccc; */
     /* background-color: #f1f1f1; */
     text-align: center;
     width: 100%;
@@ -169,6 +161,25 @@ li {
 .tab:hover{
     background-color: #AAA;
 }
+/* Style the buttons that are used to open the tab content */
+/* .tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14% 17%;
+    transition: 0.3s;
+    height: 10%;
+}   */
+  /* Change background color of buttons on hover */
+/* .tab button:hover {
+    background-color: #ddd;
+  } */
+  /* Create an active/current tablink class */
+/* .tab button.active {
+    background-color: #ccc;
+  } */
 /* Style the tab content */
 .tabcontent {
     /* display: none; */
@@ -176,7 +187,7 @@ li {
     padding: 6px 12px;
     /* border: 1px solid #ccc; */
     border-top: none;
-  }  
+}  
 .select-any-field{
     /* padding-left: 30%; */
     /* display: inline; */
@@ -298,6 +309,28 @@ li {
     background-color: #0F2442;
     padding: 3% 5%;
 }
+.footer-title{
+    font-weight: 500;
+    font-size: 1.3rem;
+    margin-bottom: 30%;
+}
+.all-footer-details{
+    font-weight: 50;
+    cursor: pointer;
+    margin-top: 15%;
+}
+.last{
+    margin-top: 0;
+    cursor: pointer;
+}
+.form-control{
+    width: 80%;
+    height: 20%;
+}
+.submit{
+    background-color: thistle;
+    cursor: pointer;
+}
 .horizontal-list{
   line-height: 2rem;
   margin: 0 auto;
@@ -316,6 +349,8 @@ li {
 }
 .email{
     color:white;
+    padding-right: 20%;
+    font-size: 1.5rem;
 }
 .download-app-class-links{
     text-align: right;
@@ -333,11 +368,13 @@ li {
     float: left;
     border-radius: 10%;
     margin-left: 3%;
+    margin-right: 5%;
     padding-left: 3%;
 }
 
 .all-icons{
-    margin-left: 50%;
+    margin-left: 40%;
+    margin-right: 10%;
 }
 .lastlogos
 {
